change catalog file

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: Lato;
+  font-family: Lato, sans-serif;
   font-style: normal;
   font-weight: normal;
 }
@@ -74,30 +74,7 @@ header {
 }
 
 .menu_btn:hover .menu-hover {
-  -webkit-animation-duration: 0.5s;
-          animation-duration: 0.5s;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-  -webkit-animation-name: menu;
-          animation-name: menu;
-}
-
-@-webkit-keyframes menu {
-  from {
-    right: -236px;
-  }
-  to {
-    right: 0px;
-  }
-}
-
-@keyframes menu {
-  from {
-    right: -236px;
-  }
-  to {
-    right: 0px;
-  }
+  display: block;
 }
 
 .menu_btn-item {
@@ -192,7 +169,8 @@ header {
           box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
   position: absolute;
   z-index: 1;
-  right: -236px;
+  right: 0px;
+  display: none;
 }
 
 .menu-hover button {
@@ -461,6 +439,9 @@ article img {
   height: 341px;
   background: #222224;
   margin-top: 95px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .box {
@@ -470,7 +451,9 @@ article img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-top: 103px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .box__delivery {
@@ -710,12 +693,179 @@ footer {
   background: #ffffff;
 }
 
+@media (max-width: 768px) {
+  .header {
+    width: 100%;
+  }
+  .container {
+    max-width: 737px;
+    width: 95%;
+  }
+  .brand {
+    background-position: left;
+    height: 367px;
+    background-size: 50%;
+  }
+  .brand__title {
+    padding-top: 138px;
+    padding-left: 400px;
+  }
+  .the-brand {
+    font-size: 44px;
+    line-height: 53px;
+  }
+  .lux {
+    font-size: 24px;
+    line-height: 29px;
+  }
+  .categories {
+    padding-top: 20px;
+    height: 303px;
+  }
+  .categories ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .categories__content img {
+    width: 232px;
+    height: 167px;
+  }
+  .categories__accesories img {
+    height: 116px;
+    width: inherit;
+  }
+  .categories__content {
+    margin-bottom: 13px;
+  }
+  .categories__content h4 {
+    top: 59px;
+    left: 39px;
+  }
+  .accesories__h4 {
+    top: 33px;
+    left: 288px;
+  }
+  .card {
+    padding-top: 155px;
+  }
+  .card__p {
+    padding-bottom: 72px;
+  }
+  .card__items ul {
+    gap: 14px;
+    -ms-grid-columns: (360px)[2];
+        grid-template-columns: repeat(2, 360px);
+  }
+  .card form {
+    padding-top: 32px;
+  }
+  .benefits {
+    margin-top: 64px;
+    height: 610px;
+    width: 100%;
+  }
+  .box {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-bottom: 64px;
+    padding-top: 48px;
+  }
+  .mail {
+    height: 623px;
+    background-size: cover;
+    background-position: -317px;
+  }
+  .info {
+    padding-top: 64px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .form-subscribe {
+    padding-top: 48px;
+  }
+}
+
+@media (max-width: 375px) {
+  .account__btn {
+    display: none;
+  }
+  .cart {
+    display: none;
+  }
+  .head__navigation {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
+  }
+  .brand {
+    max-height: 363px;
+    background-image: none;
+  }
+  .brand__title {
+    padding: 148px 56px;
+  }
+  .the-brand {
+    font-size: 38px;
+    line-height: 37px;
+  }
+  .lux {
+    font-size: 20px;
+  }
+  .categories {
+    padding-top: 64px;
+    height: auto;
+  }
+  .categories__content {
+    padding-bottom: 32px;
+  }
+  .categories__content img {
+    width: 356px;
+    height: 247px;
+  }
+  .categories__content h4 {
+    top: 98px;
+    left: 94px;
+  }
+  .categories__accesories {
+    width: 356px;
+  }
+  .categories__accesories img {
+    display: block;
+  }
+  .accesories__h4 {
+    top: 30px;
+    left: 92px;
+  }
+  .card {
+    padding-top: 64px;
+  }
+  .card__items ul {
+    -ms-grid-columns: (360px)[1];
+        grid-template-columns: repeat(1, 360px);
+    -ms-grid-rows: (582px)[6];
+        grid-template-rows: repeat(6, 582px);
+  }
+}
+
 /* Конец стр. index */
 /* Начало стр. catalog */
 .breadcrumbs {
   width: 100%;
   height: 148px;
   background: #f8f3f4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .breadcrumbs_content {
@@ -725,8 +875,10 @@ footer {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-top: 59px;
   text-transform: uppercase;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .arrivals {
@@ -864,6 +1016,58 @@ footer {
   padding-left: 10px;
 }
 
+.filter-size {
+  position: relative;
+  cursor: pointer;
+}
+
+.filter-size .size-hover {
+  width: 79px;
+  height: 103px;
+  background: #ffffff;
+  -webkit-box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+          box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  padding-top: 5px;
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: none;
+}
+
+.filter-size:hover .size-hover {
+  display: block;
+}
+
+.size-hover-form .size {
+  font-size: 14px;
+  line-height: 16px;
+  color: #6f6e6e;
+  padding-top: 8px;
+  padding-left: 9px;
+  /* input[type="checkbox"] {
+      display: none;
+    } */
+}
+
+.size-hover-form .size label {
+  padding-left: 9px;
+  /*  &:before {
+        content: " ";
+        color: #000;
+        display: inline-block;
+        position: relative;
+        text-align: center;
+        text-indent: 0px;
+        width: 13px;
+        height: 13px;
+        background: #fff;
+        border: 1px solid #ebebeb;
+        border-image: initial;
+        vertical-align: middle;
+      } */
+}
+
 .filter-price img {
   padding-left: 10px;
 }
@@ -913,158 +1117,53 @@ footer {
   color: #f16d7f;
 }
 
-/* index adaptive tablet */
 @media (max-width: 768px) {
-  .header {
-    width: 100%;
+  .filter {
+    padding-top: 24px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
-  .container {
-    max-width: 737px;
-    width: 95%;
+  .catalog-card {
+    padding-top: 40px;
   }
-  .brand {
-    background-position: left;
-    height: 367px;
-    background-size: 50%;
-  }
-  .brand__title {
-    padding-top: 138px;
-    padding-left: 400px;
-  }
-  .the-brand {
-    font-size: 44px;
-    line-height: 53px;
-  }
-  .lux {
-    font-size: 24px;
-    line-height: 29px;
-  }
-  .categories {
-    padding-top: 20px;
-    height: 303px;
-  }
-  .categories ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .categories__content img {
-    width: 232px;
-    height: 167px;
-  }
-  .categories__accesories img {
-    height: 116px;
-    width: inherit;
-  }
-  .categories__content {
-    margin-bottom: 13px;
-  }
-  .categories__content h4 {
-    top: 59px;
-    left: 39px;
-  }
-  .accesories__h4 {
-    top: 33px;
-    left: 288px;
-  }
-  .card {
-    padding-top: 155px;
-  }
-  .card__p {
-    padding-bottom: 72px;
-  }
-  .card__items ul {
-    gap: 14px;
+  .catalog-card .catalog-card__items ul {
     -ms-grid-columns: (360px)[2];
         grid-template-columns: repeat(2, 360px);
+    -ms-grid-rows: (582px)[4];
+        grid-template-rows: repeat(4, 582px);
+    gap: 10px;
   }
-  .card form {
-    padding-top: 32px;
-  }
-  .benefits {
-    margin-top: 64px;
-    height: 610px;
-  }
-  .box {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    padding-left: 204px;
-    padding-top: 48px;
-    padding-right: 204px;
-  }
-  .mail {
-    height: 623px;
-    background-size: cover;
-    background-position: -317px;
-  }
-  .info {
-    padding-top: 64px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .form-subscribe {
-    padding-top: 48px;
+  .catalog-card .catalog-card__items ul li:nth-child(3) {
+    display: none;
   }
 }
 
-/* index adaptive mobile */
 @media (max-width: 375px) {
-  .account__btn {
+  .filter__left {
+    padding-right: 0;
+  }
+  .filter__left span {
     display: none;
   }
-  .cart {
-    display: none;
+  .filter__left img {
+    width: 37px;
+    height: 25px;
   }
-  .head__navigation {
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: end;
+  .filter__right {
+    width: 260px;
+    height: 17px;
+    font-size: 12px;
   }
-  .brand {
-    max-height: 363px;
-    background-image: none;
-  }
-  .brand__title {
-    padding: 148px 56px;
-  }
-  .the-brand {
-    font-size: 38px;
-    line-height: 37px;
-  }
-  .lux {
-    font-size: 20px;
-  }
-  .categories {
-    padding-top: 64px;
-  }
-  .categories__content {
-    padding-bottom: 32px;
-  }
-  .categories__content img {
-    width: 356px;
-    height: 247px;
-  }
-  .categories__content h4 {
-    top: 98px;
-    left: 94px;
-  }
-  .categories__accesories {
-    width: 356px;
-  }
-  .categories__accesories img {
-    display: block;
-  }
-  .accesories__h4 {
-    top: 30px;
-    left: 92px;
+  .catalog-card .catalog-card__items ul {
+    -ms-grid-columns: (360px)[1];
+        grid-template-columns: repeat(1, 360px);
+    -ms-grid-rows: (582px)[8];
+        grid-template-rows: repeat(8, 582px);
   }
 }
 
+/* Конец стр. catalog */
 /* Начало стр. product */
 .slide {
   max-height: 776px;
@@ -1267,7 +1366,6 @@ footer {
   gap: 30px;
 }
 
-/* product adaptive tablet */
 @media (max-width: 768px) {
   .block-collection {
     width: 100%;
@@ -1290,12 +1388,16 @@ footer {
 
 @media (max-width: 375px) {
   .breadcrumbs_content {
-    padding-top: 24px;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .breadcrumbs_content nav {
     padding-top: 32px;
@@ -1382,7 +1484,7 @@ footer {
   }
 }
 
-/* Конец стр. catalog */
+/* Конец стр. product */
 /* Начало стр. cart */
 .cart-content {
   display: -webkit-box;
@@ -1692,9 +1794,6 @@ footer {
 @media (max-width: 375px) {
   .goods {
     padding-top: 43px;
-  }
-  .breadcrumbs_content h1 {
-    padding-top: 26px;
   }
   .goods-one {
     width: 358px;
